--- a/res/values-es-rES/cr_strings.xml
+++ b/res/values-es-rES/cr_strings.xml
@@ -1555,7 +1555,7 @@ https://plus.google.com/u/0/communities/118297646046960923906</string>
     <string name="media_scanner_on_boot_disabled">No escanear medios</string>
     <!-- Reset settings -->
     <string name="reset_settings_title">Reestablecer la configuración predeterminada</string>
-    <string name="reset_settings_message">Esto restablecerá la mayoría de la configuración de crDroid a sus valores predeterminados para el usuario actual. ¿Deseas continuar?</string>
+    <string name="reset_settings_message">Esto restablecerá la mayoría de la configuración de FlokoROM a sus valores predeterminados para el usuario actual. ¿Deseas continuar?</string>
     <!-- OTA -->
     <string name="ota_crdroid_title">Actualizaciones</string>
     <string name="ota_crdroid_summary">Comprueba si hay actualizaciones OTA y enlaces para tu dispositivo</string>
