--- a/res/values-zh-rCN/cr_strings.xml
+++ b/res/values-zh-rCN/cr_strings.xml
@@ -1554,7 +1554,7 @@
     <string name="media_scanner_on_boot_disabled">不扫描媒体</string>
     <!-- Reset settings -->
     <string name="reset_settings_title">重置设置</string>
-    <string name="reset_settings_message">这将把大多数 crdroid 设置重置为当前用户的默认值。您要继续吗？</string>
+    <string name="reset_settings_message">这将把大多数 FlokoROM 设置重置为当前用户的默认值。您要继续吗？</string>
     <!-- OTA -->
     <string name="ota_crdroid_title">更新</string>
     <string name="ota_crdroid_summary">检查您的设备的 OTA 更新和链接</string>
