Initial : we are now MythicROM

--- a/res/xml/crdroid_settings_about.xml
+++ b/res/xml/crdroid_settings_about.xml
@@ -45,12 +45,12 @@
         settings:allowDividerAbove="false" />
 -->
 
-    <!-- Floko Share -->
+    <!-- mythic Share -->
     <PreferenceScreen
         android:key="crdroid_share"
         android:icon="@drawable/ic_share"
-        android:title="@string/share_floko_title"
-        android:summary="@string/share_floko_summary"
+        android:title="@string/share_mythic_title"
+        android:summary="@string/share_mythic_summary"
         settings:allowDividerAbove="false" />
 
     <!-- crDroid Donate -->
